WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141541
Crash under RemoteLayerTreeDrawingArea::flushLayers() when closing a tab
https://bugs.webkit.org/show_bug.cgi?id=141541
Summary
Crash under RemoteLayerTreeDrawingArea::flushLayers() when closing a tab
Tim Horton
Reported
2015-02-12 15:49:51 PST
Crash under RemoteLayerTreeDrawingArea::flushLayers() when closing a tab
Attachments
Patch
(2.19 KB, patch)
2015-02-12 15:50 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-02-12 15:50:08 PST
Created
attachment 246483
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-12 16:50:07 PST
Comment on
attachment 246483
[details]
Patch Clearing flags on attachment: 246483 Committed
r180022
: <
http://trac.webkit.org/changeset/180022
>
WebKit Commit Bot
Comment 3
2015-02-12 16:50:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug