Crash under RemoteLayerTreeDrawingArea::flushLayers() when closing a tab https://bugs.webkit.org/show_bug.cgi?id=141541

Reviewed by Benjamin Poulain.

* WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.mm:
(WebKit::RemoteLayerTreeDrawingArea::flushLayers):
The WebPage pointer can become stale between when it is retrieved
and dereferenced. Retrieve it by ID inside the dispatch_async block
instead of outside of it.


Canonical link: https://commits.webkit.org/159570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180022 268f45cc-cd09-0410-ab3c-d52691b4dbfc